--- a/index.html
+++ b/index.html
@@ -7,19 +7,63 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
-    <form action="#">
+    <div class="container">
+        <!-- FORM -->
+        <div class="box">
+            <form action="#">
+                <div class="flex-container">
+                    <div class="col-33">
+                        <h6>Nome Cognome</h6>
+                        <input class="user-name input-style" type="text">
+                    </div>
+                    <div class="col-33">
+                        <h6>Km da percorrere</h6>
+                        <input class="kilometers input-style" type="number">
+                    </div>
+                    <div class="col-33">
+                        <h6>Fascia d'et&agrave;</h6>
+                        <select class="age-user input-style" name="" id="">
+                            <option value="Maggiorenne">Maggiorenne</option>
+                            <option value="Minorenne">Minorenne</option>
+                            <option value="Over 65">Over 65</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <button class="genera input-style button-style">GENERA</button>
+                        <button class="annulla input-style button-style">ANNULLA</button>
+                    </div>
+                </div>
+            </form>
+        </div>
 
-        <input class="user-name" type="text" placeholder="Inserisci il tuo Nome">
-        <input class="kilometers" type="number" placeholder="Inserisci i chilometri che devi effettuare">
-        <select class="age-user" name="" id="">
-            <option value="Maggiorenne">Maggiorenne</option>
-            <option value="Minorenne">Minorenne</option>
-            <option value="Over 65">Over 65</option>
-        </select>
-        <button>ANNULLA</button>
-        <button class="genera">GENERA</button>
-    </form>
+        <div class="ticket">
+            <div>
+                <h2>DETTAGLIO PASSEGGERI</h2>
+                <div class="ticket-name">
+                    <h2>Nome Passeggero</h2>
+                    <span id="name-pass"></span>
+                </div>
+            </div>
+            <div class="ticket-number">
+                <div class="col-25">
+                    <h5>Offerta</h5>
+                    <span id="type-ticket"></span>
+                </div>
+                <div class="col-25">
+                    <h5>Carrozza</h5>
+                    <span id="number-train"></span>
+                </div>
+                <div class="col-25">
+                    <h5>Codice CP</h5>
+                    <span id="ticket-code"></span>
+                </div>
+                <div class="col-25">
+                    <h5>Costo Biglietto</h5>
+                    <span id="price-ticket"></span>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
