Add randomCarriage + randomCode script

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="col-25">
                         <h3>Carrozza</h3>
-                        <span id="number-train"></span>
+                        <span id="carriage-number"></span>
                     </div>
                     <div class="col-25">
                         <h3>Codice CP</h3>
